checker/tests/parsing/errors/union_leading_pipe.mft
type T {
  f: | A;
}
=== error ===
Unrecognized token `|` found at 14:15
Expected one of "field reference", "identifier", "string literal" or "variable"